// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedList renders correctly 1`] = `
<View>
  <FlatList
    ListFooterComponent={[Function]}
    ListHeaderComponent={[Function]}
    data={
      Array [
        1,
        2,
        3,
      ]
    }
    disableVirtualization={false}
    extraData={true}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReached={[Function]}
    onEndReachedThreshold={2}
    onRefresh={[Function]}
    refreshing={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</View>
`;

exports[`ListControl renders correctly 1`] = `
<PopupMenuButton
  actions={
    Array [
      Array [
        "All Posts",
        [Function],
      ],
      Array [
        "Discussions",
        [Function],
      ],
      Array [
        "Requests",
        [Function],
      ],
      Array [
        "Offers",
        [Function],
      ],
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Discussions
  </Text>
  <Icon
    name="ArrowDown"
  />
</PopupMenuButton>
`;

exports[`ListControls renders correctly 1`] = `
<View>
  <ListControl
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": null,
          "label": "All Posts",
        },
        Object {
          "id": "discussion",
          "label": "Discussions",
        },
        Object {
          "id": "request",
          "label": "Requests",
        },
        Object {
          "id": "offer",
          "label": "Offers",
        },
      ]
    }
    selected="all"
  />
  <ListControl
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": "updated",
          "label": "Latest",
        },
        Object {
          "id": "votes",
          "label": "Popular",
        },
      ]
    }
    selected="latest"
  />
</View>
`;

exports[`PostRow only displays communities in the selected network 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.6}
    delayPressIn={50}
    onPress={[Function]}
  >
    <View>
      <PostCard
        goToCommunity={[Function]}
        post={
          Object {
            "communities": Array [
              Object {
                "name": "community1",
                "network": Object {
                  "id": 1,
                },
              },
              Object {
                "name": "community3",
                "network": Object {
                  "id": 1,
                },
              },
            ],
            "id": 1,
          }
        }
        showCommunity={undefined}
        showMember={undefined}
        showTopic={undefined}
      />
    </View>
  </TouchableOpacity>
</View>
`;

exports[`PostRow renders correctly 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.6}
    delayPressIn={50}
    onPress={[Function]}
  >
    <View>
      <PostCard
        goToCommunity={[Function]}
        post={
          Object {
            "id": 1,
          }
        }
        showCommunity={undefined}
        showMember={undefined}
        showTopic={undefined}
      />
    </View>
  </TouchableOpacity>
</View>
`;
